[package]
name = "bittensor-commit-reveal"
version = "0.1.0"
edition = "2021"

[lib]
name = "bittensor_commit_reveal"
crate-type = ["cdylib"]

[dependencies]
ark-serialize = { version = "0.4.0", features = [ "derive" ], default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4", default-features = false }
pyo3 = { version = "0.22.4", features = ["gil-refs"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tle = { git = "https://github.com/ideal-lab5/timelock", rev = "5416406cfd32799e31e1795393d4916894de4468" }
sha2 = "0.10.8"
w3f-bls = { version = "=0.1.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
