[package]
name = "bittensor-commit-reveal"
version = "0.3.0"
edition = "2021"

[lib]
name = "bittensor_commit_reveal"
crate-type = ["cdylib"]

[dependencies]
ark-serialize = { version = "0.4.0", features = [ "derive" ], default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
pyo3 = { version = "0.22.4", features = ["gil-refs"] }
rand_core = "0.6.4"
tokio = { version = "1", features = ["full"] }
tle = { git = "https://github.com/ideal-lab5/timelock", rev = "5416406cfd32799e31e1795393d4916894de4468" }
sha2 = "0.10.8"
w3f-bls = { version = "=0.1.3", default-features = false }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
