[project]
name = "bittensor-commit-reveal"
version = "0.3.0"
description = ""
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["substrate", "scale", "codec", "bittensor", "commit reveal"]

dependencies = []
requires-python = ">= 3.9"

authors = [
  {name = "Roman Chkhaidze", email = "r@latent.to"},
]
maintainers = [
  {name = "Cortex Team", email = "cortex@opentensor.dev"},
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/opentensor/bittensor-commit-reveal"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
include = ["src*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
    "maturin==1.7.0",
    "pytest-asyncio==0.23.7"
]